GNOME Bugzilla – Bug 758655
grl-launch fixes
Last modified: 2015-12-14 10:41:49 UTC
.
Created attachment 316239 [details] [review] grl-launch: Clarify "-T" option
Created attachment 316240 [details] [review] grl-launch: Add examples to man page
Review of attachment 316239 [details] [review]: looks good
Review of attachment 316240 [details] [review]: Yep
+1
Attachment 316239 [details] pushed as 2c3d2b3 - grl-launch: Clarify "-T" option Attachment 316240 [details] pushed as 539cf42 - grl-launch: Add examples to man page