grl-launch: Clarify "-T" option

https://bugzilla.gnome.org/show_bug.cgi?id=758655